--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -101,6 +101,10 @@ h6 {
   @apply rounded-lg xl:w-2/5 bg-white dark:bg-darkmode-theme-light p-10 border border-indigo-100;
 }
 
+.portfolio-box {
+  @apply rounded-lg xl:w-1/4 bg-white dark:bg-darkmode-theme-light p-10 border border-indigo-100;
+}
+
 // Newlsetter modal animation
 /* Add animation keyframes */
 @keyframes slideInFromBottom {
