--- a/layouts/te-portfolio/list.html
+++ b/layouts/te-portfolio/list.html
@@ -12,27 +12,28 @@
 
   <div class="container flex flex-row flex-wrap justify-center gap-x-8 gap-y-8">
     {{ range .Params.columns }}
-    <div class="flex flex-col content-box">
-      <div class="flex flex-col items-left">
-        <div class="mb-6 text-dark dark:text-white">
+    <div class="flex flex-col portfolio-box">
+      <div class="flex flex-col items-center text-center gap-y-4">
+        <div class="text-dark dark:text-white">
           {{ partial "image" (dict "Src" .image "Size" "" "Class" "w-60" "Alt" "") }}
         </div>
-        <h3 class="mb-2 font-semibold h5 font-primary">
+        <div class="content-center h-16">
+          <h3 class="font-semibold h5 font-primary">
           {{ .title }}
         </h3>
-        <p class="mb-4 text-dark dark:text-white">
-          {{ .designer | markdownify }}
+      </div>
+        <p class="text-dark dark:text-white">
+          by {{ .designer | markdownify }}
         </p>
-        <p class="mb-4 italic text-dark dark:text-white">
-          {{ .keywords | markdownify }}
+        <p class="italic text-dark dark:text-white">
+          Tags: {{ .keywords | markdownify }}
         </p>
-        <div>
-          <span class="text-dark dark:text-white">
+          <p class="text-dark dark:text-white">
             <a href="{{ .website }}"> {{ .company | markdownify }} </a>
-          </span> | <span class="text-dark dark:text-white">
+          </p>
+          <p class="text-dark dark:text-white">
             <a href="{{ .pattern_link }}"> {{ .CTA | markdownify }} </a>
-          </span>
-        </div>
+          </p>
       </div>
     </div>
     {{ end }}
