add gynka testimonial

--- a/layouts/partials/testimonials.html
+++ b/layouts/partials/testimonials.html
@@ -23,11 +23,11 @@
                 <div class="my-8">
                   {{ .content | markdownify }}
                 </div>
-                <div class="flex items-center mt-auto ">
-                  <div class="text-dark dark:text-white">
-                    {{ partial "image" (dict "Src" .avatar "Size" "110x110" "Class" "rounded rounded-full" "Alt" .name) }}
+                <div class="flex flex-col items-center mt-auto text-center md:text-left md:flex-row gap-y-4 md:gap-y-0 md:gap-x-4">
+                  <div class="text-dark dark:text-white max-w-28">
+                    {{ partial "image" (dict "Src" .avatar "Size" "" "Class" "rounded rounded-full" "Alt" .name) }}
                   </div>
-                  <div class="ml-4">
+                  <div class="">
                     <h3 class="font-semibold h5 font-primary">
                       {{ .name }}
                     </h3>
