--- a/layouts/te-portfolio/list.html
+++ b/layouts/te-portfolio/list.html
@@ -15,25 +15,27 @@
     <div class="flex flex-col portfolio-box">
       <div class="flex flex-col items-center text-center gap-y-4">
         <div class="text-dark dark:text-white">
-          {{ partial "image" (dict "Src" .image "Size" "" "Class" "w-60" "Alt" "") }}
+          {{ partial "image" (dict "Src" .image "Size" "" "Class" "aspect-square object-cover" "Alt" "") }}
         </div>
-        <div class="content-center h-16">
+        <div class="content-center h-16 px-10">
           <h3 class="font-semibold h5 font-primary">
-          {{ .title }}
-        </h3>
-      </div>
-        <p class="text-dark dark:text-white">
+            {{ .title }}
+          </h3>
+        </div>
+        <div class="flex flex-col items-center px-10 pb-10 text-center text-dark dark:text-white gap-y-4">
+        <p class="">
           by {{ .designer | markdownify }}
         </p>
-        <p class="italic text-dark dark:text-white">
+        <p class="italic ">
           Tags: {{ .keywords | markdownify }}
         </p>
-          <p class="text-dark dark:text-white">
-            <a href="{{ .website }}"> {{ .company | markdownify }} </a>
-          </p>
-          <p class="text-dark dark:text-white">
-            <a href="{{ .pattern_link }}"> {{ .CTA | markdownify }} </a>
-          </p>
+        <p class="">
+          <a href="{{ .website }}"> {{ .company | markdownify }} </a>
+        </p>
+        <p class="">
+          <a href="{{ .pattern_link }}"> {{ .CTA | markdownify }} </a>
+        </p>
+      </div>
       </div>
     </div>
     {{ end }}
