--- a/layouts/my-knitting-projects/list.html
+++ b/layouts/my-knitting-projects/list.html
@@ -15,7 +15,7 @@
     <div class="flex flex-col portfolio-box">
       <div class="flex flex-col items-center text-center gap-y-4">
         <div class="text-dark dark:text-white">
-          {{ partial "image" (dict "Src" .image "Size" "" "Class" "aspect-square object-cover" "Alt" "") }}
+          {{ partial "image" (dict "Src" .image "Size" "" "Class" "aspect-square rounded-t-lg object-cover" "Alt" "") }}
         </div>
         <div class="content-center h-16 px-10">
           <h3 class="font-semibold h5 font-primary">
