--- a/layouts/my-knitting-projects/list.html
+++ b/layouts/my-knitting-projects/list.html
@@ -12,34 +12,32 @@
 
   <div class="container flex flex-row flex-wrap justify-center gap-x-8 gap-y-8">
     {{ range .Params.columns }}
-    <div class="flex flex-col portfolio-box">
-      <div class="flex flex-col items-center text-center gap-y-4">
-        <div class="text-dark dark:text-white">
-          {{ partial "image" (dict "Src" .image "Size" "" "Class" "w-full aspect-square rounded-t-lg object-cover" "Alt" "") }}
-        </div>
-        <div class="content-center h-16 px-10">
-          <h3 class="font-semibold h5 font-primary">
-            {{ .title }}
-          </h3>
-        </div>
-        <div class="flex flex-col items-center px-10 pb-10 text-center text-dark dark:text-white gap-y-4">
-        <p class="">
+    <div class="flex flex-col items-center text-center portfolio-box gap-y-4">
+      <div class="text-dark dark:text-white">
+        {{ partial "image" (dict "Src" .image "Size" "" "Class" "w-full aspect-square rounded-t-lg object-cover" "Alt"
+        "") }}
+      </div>
+      <div class="content-center h-16 px-10">
+        <h3 class="font-semibold h5 font-primary">
+          {{ .title }}
+        </h3>
+      </div>
+      <div class="flex flex-col items-center flex-grow px-10 pb-10 text-center place-content-between text-dark dark:text-white gap-y-4">
+        <div class="">
           by {{ .designer | markdownify }}
-        </p>
-        <p class="italic ">
+        </div>
+        <div class="italic">
           Tags: {{ .keywords | markdownify }}
-        </p>
-        <p class="">
+        </div>
+        <div class="">
           <a href="{{ .website }}"> {{ .company | markdownify }} </a>
-        </p>
-        <p class="">
+        </div>
+        <div class="">
           <a href="{{ .pattern_link }}"> {{ .CTA | markdownify }} </a>
-        </p>
-      </div>
-      </div>
+        </div>
+    </div>
     </div>
     {{ end }}
-  </div>
 </section>
 
 {{ end }}
