--- a/layouts/partials/page-header.html
+++ b/layouts/partials/page-header.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="justify-center row">
       <div class="md:col-10 lg:col-7">
-        <h1 class="mb-6 text-center text-slate-50">{{ .Title | title }}</h1>
+        <h1 class="mb-6 text-center text-slate-50">{{ strings.FirstUpper .Title }}</h1>
         <p class="text-center text-slate-50"> {{ .Description }}</p>
       </div>
     </div>
