add custom logo

--- a/layouts/partials/essentials/header.html
+++ b/layouts/partials/essentials/header.html
@@ -3,7 +3,7 @@
     <!-- logo -->
     <div class="order-0">
       <!-- navbar brand/logo -->
-      <a class="block navbar-brand" href="{{ site.Home.RelPermalink }}">
+      <a class="block navbar-brand site-logo" href="{{ site.Home.RelPermalink }}">
         {{ partial "logo" }}
       </a>
     </div>
