--- a/assets/scss/navigation.scss
+++ b/assets/scss/navigation.scss
@@ -12,7 +12,7 @@ input#nav-toggle:checked + label #show-button {
   }
   
   .header {
-    @apply bg-slate-900 dark:bg-darkmode-body py-6;
+    @apply bg-slate-900 dark:bg-darkmode-body;
   }
   
   // navbar items
