rename phonetics in hero to subtitle for flexibility

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,7 +10,7 @@
         </h1>
         <div class="mb-8 text-slate-500">
           <p class="italic tracking-wider text-h3 lg:text-h2">
-            {{ .phonetics | markdownify }}
+            {{ .subtitle | markdownify }}
           </p>
         </div>
         <div class="text-lg text-slate-50">
