--- a/layouts/index.hu.html
+++ b/layouts/index.hu.html
@@ -7,7 +7,7 @@
       <div class="flex flex-col mb-8 text-center md:text-left gap-y-2">
         <div class="text-slate-500">
             <p class="mb-2 italic text-h3 lg:text-l">
-              {{ .phonetics | markdownify }}
+              {{ .subtitle | markdownify }}
             </p>
           </div>
         <h1 class="mb-8 tracking-wide text-h3 lg:text-h1 text-slate-50">
