--- a/layouts/knitting-technical-editing/list.html
+++ b/layouts/knitting-technical-editing/list.html
@@ -1,15 +1,19 @@
 {{ define "main" }}
-  {{ partial "page-header" . }}
+{{ partial "page-header" . }}
 
 
-  <section class="pt-10 section-sm xl:pt-0 light-bg">
-    <div class="container">
-      <div class="justify-center row ">
-        <div class="text-left md:col-10 lg:col-7">
-          <div class="content">{{ .Content }}</div>
-          
-        </div>
+<section class="pt-10 section-sm xl:pt-0 light-bg">
+  <div class="container">
+    <div class="justify-center row ">
+      <div class="text-left md:col-10 lg:col-7">
+        <div class="content">{{ .Content }}</div>
+
+        
       </div>
+      <!-- TE process -->
+      {{ partial "te-process.html" . }}
+      <!-- /TE process -->
     </div>
-  </section>
+  </div>
+</section>
 {{ end }}
