--- a/layouts/partials/te-process.html
+++ b/layouts/partials/te-process.html
@@ -16,7 +16,7 @@
 
     <div class="container flex flex-row flex-wrap justify-center gap-x-8 gap-y-8">
         {{ range .Params.process }}
-          <div class="flex flex-col items-center text-center narrow-content-box gap-y-4">
+          <div class="flex flex-col items-center text-left narrow-content-box gap-y-4">
             <div class="text-dark dark:text-white">
               {{ partial "image" (dict "Src" .icon "Size" "50x50" "Class" "" "Alt" .process_step) }}
             </div>
@@ -26,7 +26,7 @@
             </h3>
 
           </div>
-          <div class="flex flex-col items-center flex-grow text-center place-content-between text-dark dark:text-white gap-y-4">
+          <div class="flex flex-col items-center flex-grow text-left place-content-between text-dark dark:text-white gap-y-4">
             <p class="text-left">
               {{ .content | markdownify }}
             </p>
