--- a/layouts/partials/te-process.html
+++ b/layouts/partials/te-process.html
@@ -26,7 +26,7 @@
             </h3>
 
           </div>
-          <div class="flex flex-col items-center flex-grow text-left place-content-between text-dark dark:text-white gap-y-4">
+          <div class="flex flex-col flex-grow text-left text-dark dark:text-white gap-y-4">
             <p class="text-left">
               {{ .content | markdownify }}
             </p>
