--- a/layouts/partials/te-process.html
+++ b/layouts/partials/te-process.html
@@ -20,13 +20,13 @@
             <div class="text-dark dark:text-white">
               {{ partial "image" (dict "Src" .icon "Size" "50x50" "Class" "" "Alt" .process_step) }}
             </div>
-            <div class="content-center h-16 px-10">
+            <div class="h-16 px-10">
             <h3 class="font-semibold h5 font-primary">
               {{ .process_step }}
             </h3>
 
           </div>
-          <div class="flex flex-col flex-grow text-left text-dark dark:text-white gap-y-4">
+          <div class="flex flex-col flex-grow text-left align-top text-dark dark:text-white">
             <p class="text-left">
               {{ .content | markdownify }}
             </p>
