create partial from FAQ

--- a/layouts/knitting-technical-editing/list.html
+++ b/layouts/knitting-technical-editing/list.html
@@ -13,6 +13,11 @@
       <!-- TE process -->
       {{ partial "te-process.html" . }}
       <!-- /TE process -->
+
+      <!-- FAQ -->
+      {{ partial "te-faq.html" . }}
+      <!-- /FAQ -->
+
     </div>
   </div>
 </section>
