--- a/layouts/partials/te-faq.html
+++ b/layouts/partials/te-faq.html
@@ -17,7 +17,7 @@
     <section class="pt-10 section-sm light-bg xl:pt-0">
         <div class="container pb-10">
           <div class="justify-center row ">
-            <div class="text-center md:col-10 lg:col-7">
+            <div class="text-left md:col-10 lg:col-7">
               <div class="content">{{ .Content | markdownify }}</div>
             </div>
           </div>
