add te-basics partial

--- a/layouts/knitting-technical-editing/list.html
+++ b/layouts/knitting-technical-editing/list.html
@@ -10,13 +10,26 @@
 
         
       </div>
+
+      <!-- TE basics -->
+      {{ partial "te-basics.html" . }}
+      <!-- /TE basics -->
+
+      <!-- TE services -->
+      {{ partial "te-services.html" . }}
+      <!-- /TE services -->
+
       <!-- TE process -->
       {{ partial "te-process.html" . }}
       <!-- /TE process -->
-
+      
       <!-- FAQ -->
       {{ partial "te-faq.html" . }}
       <!-- /FAQ -->
+
+      <!-- TE testimonials -->
+      {{ partial "testimonials.html" . }}
+      <!-- /TE testimonials -->
 
     </div>
   </div>
