--- a/layouts/partials/te-services.html
+++ b/layouts/partials/te-services.html
@@ -1,39 +1,44 @@
 {{ with site.GetPage "sections/te-services" }}
 {{ if .Params.enable }}
 <section class="pt-20 pb-20 section light-bg">
-    <div class="container">
-        <div class="row">
-            <div class="mx-auto mb-12 text-center md:col-10 lg:col-8 xl:col-6 ">
-                <h2 class="mb-4 text-slate-900">
-                    {{ .Title | markdownify }}
-                </h2>
-                <p class="text-slate-900">
-                    {{ .Params.description | markdownify }}
-                </p>
-            </div>
-        </div>
-    </div>
-
-    <div class="container flex flex-row flex-wrap justify-center gap-x-8 gap-y-8">
-        {{ range .Params.services }}
-          <div class="flex flex-col items-center text-left content-box gap-y-4">
-            <div class="text-dark dark:text-white">
-              {{ partial "image" (dict "Src" .icon "Size" "50x50" "Class" "" "Alt" .process_step) }}
-            </div>
-            <div class="h-16 px-10">
-            <h3 class="font-semibold h5 font-primary">
-              {{ .process_step | markdownify }}
-            </h3>
-
-          </div>
-          <div class="flex flex-col flex-grow text-left align-top text-dark dark:text-white">
-            <p class="text-left">
-              {{ .content | markdownify }}
-            </p>
-          </div>
-        </div>
-        {{ end }}
+  <div class="container">
+    <div class="row">
+      <div class="mx-auto mb-12 text-center md:col-10 lg:col-8 xl:col-6 ">
+        <h2 class="mb-4 text-slate-900">
+          {{ .Title | markdownify }}
+        </h2>
+        <p class="text-slate-900">
+          {{ .Params.description | markdownify }}
+        </p>
       </div>
-    </section>
+    </div>
+  </div>
+
+  <div class="container flex flex-row flex-wrap justify-center mb-10 gap-x-8 gap-y-8">
+    {{ range .Params.services }}
+    <div class="flex flex-col items-center text-left content-box gap-y-4">
+      <div class="text-dark dark:text-white">
+        {{ partial "image" (dict "Src" .icon "Size" "50x50" "Class" "" "Alt" .process_step) }}
+      </div>
+      <div class="h-16 px-10">
+        <h3 class="font-semibold h5 font-primary">
+          {{ .process_step | markdownify }}
+        </h3>
+
+      </div>
+      <div class="flex flex-col flex-grow text-left align-top text-dark dark:text-white">
+        <p class="text-left">
+          {{ .content | markdownify }}
+        </p>
+      </div>
+    </div>
     {{ end }}
-    {{ end }}
+  </div>
+
+  {{ if .Params.button.enable }}
+  {{ partial "components/CTA-button.html" (dict "content" .Params.button.content "label" .Params.button.label "link"
+  .Params.button.link) }}
+  {{ end }}
+</section>
+{{ end }}
+{{ end }}
