--- a/layouts/partials/te-faq.html
+++ b/layouts/partials/te-faq.html
@@ -1,20 +1,20 @@
 {{ with site.GetPage "sections/te-faq" }}
 {{ if .Params.enable }}
-<section class="pt-20 pb-20 section light-bg">
+<section class="pt-20 pb-20 section dark-bg">
     <div class="container">
         <div class="row">
             <div class="mx-auto mb-12 text-center md:col-10 lg:col-8 xl:col-6 ">
-                <h2 class="mb-4 text-slate-900">
+                <h2 class="mb-4 text-slate-50">
                     {{ .Title | markdownify }}
                 </h2>
-                <p class="text-slate-900">
+                <p class="text-slate-50">
                     {{ .Params.description | markdownify }}
                 </p>
             </div>
         </div>
     </div>
 
-    <section class="pt-10 section-sm light-bg xl:pt-0">
+    <section class="pt-10 section-sm dark-bg xl:pt-0">
         <div class="container pb-10">
           <div class="justify-center row ">
             <div class="text-left md:col-10 lg:col-7">
