--- a/layouts/partials/te-services.html
+++ b/layouts/partials/te-services.html
@@ -1,20 +1,20 @@
 {{ with site.GetPage "sections/te-services" }}
 {{ if .Params.enable }}
-<section class="pt-20 pb-20 section light-bg">
+<section class="pt-20 pb-20 section dark-bg">
   <div class="container">
     <div class="row">
       <div class="mx-auto mb-12 text-center md:col-10 lg:col-8 xl:col-6 ">
-        <h2 class="mb-4 text-slate-900">
+        <h2 class="mb-4 text-slate-50">
           {{ .Title | markdownify }}
         </h2>
-        <p class="text-slate-900">
+        <p class="text-slate-50">
           {{ .Params.description | markdownify }}
         </p>
       </div>
     </div>
   </div>
 
-  <div class="container flex flex-row flex-wrap justify-center mb-10 gap-x-8 gap-y-8">
+  <div class="container flex flex-row flex-wrap justify-center gap-x-8 gap-y-8">
     {{ range .Params.services }}
     <div class="flex flex-col items-center text-left content-box gap-y-4">
       <div class="text-dark dark:text-white">
@@ -35,10 +35,12 @@
     {{ end }}
   </div>
 
+<div class="mt-10">
   {{ if .Params.button.enable }}
   {{ partial "components/CTA-button.html" (dict "content" .Params.button.content "label" .Params.button.label "link"
-  .Params.button.link) }}
+  .Params.button.link "bg" "dark-bg") }}
   {{ end }}
+</div>
 </section>
 {{ end }}
 {{ end }}
