fix spacing for CTA button

--- a/layouts/partials/te-process.html
+++ b/layouts/partials/te-process.html
@@ -35,7 +35,7 @@
         {{ end }}
       </div>
 
-<div class="mt-10">
+<div class="">
   {{ if .Params.button.enable }}
   {{ partial "components/CTA-button.html" (dict "content" .Params.button.content "label" .Params.button.label "link"
   .Params.button.link "bg" "light-bg") }}
