--- a/layouts/partials/components/CTA-button.html
+++ b/layouts/partials/components/CTA-button.html
@@ -1,6 +1,6 @@
-<div class="flex flex-col items-center mb-20 text-center gap-y-4 {{ if eq .bg "dark-bg" }}text-slate-50{{ else }}text-slate-900{{ end }}">
+<div class="flex flex-col items-center mb-20 mt-12 text-center gap-y-4 {{ if eq .bg "dark-bg" }}text-slate-50{{ else }}text-slate-900{{ end }}">
     {{ if .content }}
-        <p class="text-lg font-semibold">{{ .content }}</p>
+        <p class="mb-4 text-lg font-semibold">{{ .content }}</p>
     {{ end }}
     <a class="btn btn-primary" href="{{ .link }}" rel="noopener">{{ .label }}</a>
 </div>
