--- a/layouts/my-knitting-projects/list.html
+++ b/layouts/my-knitting-projects/list.html
@@ -10,9 +10,9 @@
     </div>
   </div>
 
-  <div class="container flex flex-row flex-wrap justify-between gap-x-8 gap-y-8">
+  <div class="container flex flex-wrap place-content-center gap-x-8 gap-y-8">
     {{ range .Params.columns }}
-    <div class="flex flex-col items-center flex-grow text-center portfolio-box gap-y-4">
+    <div class="flex flex-col items-center text-center portfolio-box gap-y-4">
       <div class="text-dark dark:text-white">
         {{ partial "image" (dict "Src" .image "Size" "" "Class" "w-full aspect-square rounded-t-lg object-cover" "Alt"
         "") }}
