--- a/layouts/partials/te-process.html
+++ b/layouts/partials/te-process.html
@@ -17,10 +17,10 @@
   <div class="container flex flex-row flex-wrap justify-between gap-x-8 gap-y-8">
     {{ range .Params.process }}
     <div class="flex flex-col items-center flex-grow text-left narrow-content-box gap-y-4">
-      <div class="text-dark dark:text-white">
+      <div class="pt-4 md:pt-0 text-dark dark:text-white">
         {{ partial "image" (dict "Src" .icon "Size" "50x50" "Class" "" "Alt" .process_step) }}
       </div>
-      <div class="h-16 px-10">
+      <div class="h-10 text-center">
         <h3 class="font-semibold h5 font-primary">
           {{ .process_step }}
         </h3>
