--- a/layouts/translation-and-editing/list.html
+++ b/layouts/translation-and-editing/list.html
@@ -1,15 +1,20 @@
 {{ define "main" }}
-  {{ partial "page-header" . }}
+{{ partial "page-header" . }}
 
 
-  <section class="pt-10 section-sm light-bg xl:pt-0">
-    <div class="container">
-      <div class="justify-center row ">
-        <div class="text-left md:col-10 lg:col-7">
-          <div class="content">{{ .Content }}</div>
-          
-        </div>
+<section class="pt-10 section-sm light-bg xl:pt-0">
+  <div class="container pb-0">
+    <div class="justify-center row ">
+      <div class="text-left md:col-10 lg:col-7">
+        <div class="content">{{ .Content }}</div>
+
       </div>
     </div>
-  </section>
+  </div>
+</section>
+
+
+<!-- TE testimonials -->
+{{ partial "testimonials.html" . }}
+<!-- /TE testimonials -->
 {{ end }}
