--- a/layouts/partials/components/blog-card.html
+++ b/layouts/partials/components/blog-card.html
@@ -1,37 +1,58 @@
-<div class="bg-body dark:bg-darkmode-body">
-  {{ $image:= .Params.image }}
-  {{ if $image }}
-    {{ partial "image" (dict "Src" $image "Alt" .Title "Class" "mb-6 w-full rounded") }}
-  {{ end }}
-  <h4 class="mb-3">
-    <a href="{{ .RelPermalink }}">
-      {{ .Title }}
-    </a>
-  </h4>
-  {{ $categories:= .Params.categories }}
-  {{ if $categories }}
-    <ul class="mb-4">
+<div class="flex flex-col bg-body dark:bg-darkmode-body content-between gap-y-4">
+  <div class="">
+    {{ $image:= .Params.image }}
+    {{ if $image }}
+    {{ partial "image" (dict "Src" $image "Context" .Page "Alt" .Title "Class" "w-full rounded") }}
+    {{ end }}
+  </div>
+  <div class="flex flex-col">
+    <div>
+      <h4 class="">
+        <a href="{{ .RelPermalink }}">
+          {{ .Title }}
+        </a>
+      </h4>
+    </div>
+    <div>
+      <p class="italic">{{ .Params.lead }}</p>
+    </div>
+  </div>
+  <div class="">
+    {{ $categories:= .Params.categories }}
+    {{ if $categories }}
+    <ul class="">
       <li class="mr-4 inline-block">
-        <a href="{{ `authors/` | relLangURL }}{{ .Params.Author | urlize }}/">
-          <i class="fa-regular fa-circle-user mr-2"></i>{{ .Params.author }}
+        <a href="{{ `authors/` | relLangURL }}{{ .Params.Author | urlize }}/" class="text-sm font-semibold dark:text-zinc-400">
+          <i class="fa-regular fa-circle-user mr-2 dark:text-zinc-400"></i>{{ .Params.author }}
         </a>
       </li>
       <li class="mr-4 inline-block">
-        <i class="fa-regular fa-folder mr-1"></i>
+        <i class="fa-regular fa-folder mr-1 dark:text-zinc-400"></i>
         {{ range $i,$p:= $categories }}
-          <a
-            href="{{ `categories/` | relLangURL }}{{ . | urlize | lower }}/"
-            class="ms-1"
-            >{{ . | humanize }}{{ if ne $i (sub (len $categories) 1) }}
-              {{ "," }}
-            {{ end }}
-          </a>
+        <a href="{{ `categories/` | relLangURL }}{{ . | urlize | lower }}/" class="text-sm font-semibold dark:text-zinc-400">{{ . |
+          humanize }}{{ if ne $i
+          (sub (len $categories) 1) }}
+          {{- "," }}
+          {{ end }}
+        </a>
         {{ end }}
       </li>
+      <li class="mr-4 inline-block">
+        <p class="text-sm font-semibold dark:text-zinc-400">
+          <i class="fa-regular fa-clock mr-2 dark:text-zinc-400"></i>{{ time.Format ":date_long" .PublishDate }}
+        </p>
+      </li>
     </ul>
-  {{ end }}
-  <p class="mb-6">{{ .Summary }}</p>
-  <a class="btn btn-outline-primary btn-sm" href="{{ .RelPermalink }}">
-    {{ i18n "read_more" }}
-  </a>
+    {{ end }}
+  </div>
+  <div class="flex flex-col gap-y-2">
+    <div class="">
+      <p class="">{{ .Summary | plainify }}</p>
+    </div>
+    <div class="flex flex-row justify-end">
+      <a class="btn btn-outline-primary" href="{{ .RelPermalink }}">
+        {{ T "read_more" }}
+      </a>
+    </div>
+  </div>
 </div>
