--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-{{ partial "post-header" . }}
+{{ partial "blog-header" . }}
 
   <section class="section pt-7">
     <div class="container">
