--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -2,7 +2,7 @@
   {{ partial "blog-header" . }}
 
 
-  <section class="section">
+  <section class="section light-bg">
     <div class="container">
       <div class="flex flex-row gap-x-6">
         <!-- blog posts -->
