--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 {{ partial "blog-header" . }}
 
-  <section class="section pt-7">
+  <section class="section pt-7 light-bg">
     <div class="container">
       <div class="row justify-center">
         <article class="lg:col-10">
