customize post headers and blog-card colors

--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-{{ partial "blog-header" . }}
+{{ partial "post-header" . }}
 
   <section class="section pt-7 light-bg">
     <div class="container">
