--- a/layouts/partials/post-header.html
+++ b/layouts/partials/post-header.html
@@ -1,17 +1,17 @@
-<section>
+<section class="dark-bg">
   <div class="container text-center">
     <div class="px-8 py-14">
-      <h1>{{ T (printf "%s" (lower .Title)) | default .Title | title }}</h1>
+      <h1 class="text-slate-50">{{ T (printf "%s" (lower .Title)) | default .Title | title }}</h1>
       {{ partial "components/breadcrumb" (dict "Context" . "Class" "mt-6") }}
-      <ul class="mt-6 text-center">
+      <ul class="mt-6 text-center text-slate-50">
         <li class="mr-4 inline-block">
-          <a href="{{ `authors/` | relLangURL }}{{ .Params.Author | urlize }}/">
-            <i class="fa-regular fa-circle-user mr-2"></i>{{ .Params.author }}
+          <i class="fa-regular fa-circle-user mr-2"></i>
+          <a href="/hu/about/">{{ .Params.author }}
           </a>
         </li>
         {{ $categories:= .Params.categories }}
         {{ if $categories }}
-        <li class="mr-4 inline-block">
+        <li class="mr-4 inline-block ">
           <i class="fa-regular fa-folder mr-2"></i>
           {{ range $i,$p:= $categories }}
           <a href="{{ `categories/` | relLangURL }}{{ . | urlize | lower }}/" class="">{{ . | humanize }}{{ if ne $i
@@ -22,11 +22,15 @@
           {{ end }}
         </li>
         {{ end }}
-        <li class="mr-4 inline-block">
-          <i class="fa-regular fa-clock mr-2"></i>
+        <li class="mr-4 inline-block ">
+          <i class="fa-regular fa-clock mr-2 "></i>
           {{ time.Format ":date_long" .PublishDate }}
         </li>
       </ul>
     </div>
   </div>
 </section>
+
+<!-- Shape divider -->
+{{ partial "components/shape-divider-dark.html" . }}
+<!-- /Shape divider -->
