--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -4,7 +4,7 @@
 
   <section class="section light-bg">
     <div class="container">
-      <div class="flex flex-row gap-x-6">
+      <div class="flex lg:flex-row flex-col gap-x-12">
         <!-- blog posts -->
         <div class="flex flex-row">
           <div class="flex flex-col gap-y-12">
