--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -1,6 +1,9 @@
 {{ define "main" }}
   {{ partial "page-header" . }}
 
+  {{ with .OutputFormats.Get "rss" }}
+  {{ printf `<link rel=%q type=%q href=%q title=%q>` .Rel .MediaType.Type .Permalink site.Title | safeHTML }}
+{{ end }}
 
   <section class="section light-bg">
     <div class="container">
