--- a/layouts/_default/taxonomy.html
+++ b/layouts/_default/taxonomy.html
@@ -2,7 +2,7 @@
   {{ partial "page-header" . }}
 
 
-  <section class="section">
+  <section class="section light-bg">
     <div class="container">
       <div class="">
         <!-- blog posts -->
