--- a/layouts/partials/essentials/footer.html
+++ b/layouts/partials/essentials/footer.html
@@ -31,7 +31,7 @@
         </ul>
       </div>
       <div class="mb-8 text-center lg:col-3 lg:mb-0 lg:mt-0 lg:text-right">
-        <ul class="social-icons">
+        <ul class="social-icons flex flex-row flex-wrap justify-center lg:justify-end gap-y-2">
           {{ range site.Data.social.main }}
             <li>
               <a
