fix author link in blog-card

--- a/layouts/partials/components/blog-card.html
+++ b/layouts/partials/components/blog-card.html
@@ -22,7 +22,7 @@
     {{ if $categories }}
     <ul class="text-primary">
       <li class="mr-4 inline-block"><i class="fa-regular fa-circle-user mr-2 dark:text-zinc-400"></i>
-        <a href="{{ `authors/` | relLangURL }}{{ .Params.Author | urlize }}/"
+        <a href="/hu/about/"
           class="text-sm font-semibold dark:text-zinc-400">
           {{ .Params.author }}
         </a>
