add translation to widgets

--- a/layouts/partials/components/blog-card.html
+++ b/layouts/partials/components/blog-card.html
@@ -52,7 +52,7 @@
       <p class="">{{ .Summary | plainify }}</p>
     </div>
     <div class="flex flex-row justify-end">
-      <a class="btn btn-primary" href="{{ .RelPermalink }}">
+      <a class="btn-primary btn-sm" href="{{ .RelPermalink }}">
         {{ T "read_more" }}
       </a>
     </div>
