--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -1,32 +1,33 @@
 {{ define "main" }}
-  {{ partial "page-header" . }}
+{{ partial "page-header" . }}
 
-  {{ with .OutputFormats.Get "rss" }}
-  {{ printf `<link rel=%q type=%q href=%q title=%q>` .Rel .MediaType.Type .Permalink site.Title | safeHTML }}
+{{ with .OutputFormats.Get "rss" }}
+{{ printf `
+<link rel=%q type=%q href=%q title=%q>` .Rel .MediaType.Type .Permalink site.Title | safeHTML }}
 {{ end }}
 
-  <section class="section light-bg">
-    <div class="container">
-      <div class="flex lg:flex-row flex-col gap-x-12">
-        <!-- blog posts -->
-        <div class="flex flex-row">
-          <div class="flex flex-col gap-y-12">
-            {{ $paginator:= .Paginate .RegularPages }}
-            {{ range $paginator.Pages }}
-              <div class="">
-                {{ partial "components/blog-card" . }}
-              </div>
-            {{ end }}
+<section class="section light-bg">
+  <div class="container">
+    <div class="flex lg:flex-row flex-col gap-x-12">
+      <!-- blog posts -->
+      <div class="flex flex-row">
+        <div class="flex flex-col gap-y-12">
+          {{ $paginator:= .Paginate .RegularPages }}
+          {{ range $paginator.Pages }}
+          <div class="">
+            {{ partial "components/blog-card" . }}
           </div>
-          {{ partial "components/pagination.html" . }}
+          {{ end }}
         </div>
-        <!-- sidebar -->
-        <div class="lg:col-4">
-          <!-- widget -->
-          {{ $widget:= site.Params.widgets.sidebar }}
-          {{ partialCached "widgets/widget-wrapper" ( dict "Widgets" $widget "Scope" . ) }}
-        </div>
+        {{ partial "components/pagination.html" . }}
+      </div>
+      <!-- sidebar -->
+      <div class="lg:col-4">
+        <!-- widget -->
+        {{ $widget:= site.Params.widgets.sidebar }}
+        {{ partialCached "widgets/widget-wrapper" ( dict "Widgets" $widget "Scope" . ) }}
       </div>
     </div>
-  </section>
+  </div>
+</section>
 {{ end }}
