--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -19,7 +19,7 @@
                       <a
                         class="tag-btn bg-theme-light"
                         href="{{ `tags/` | relLangURL }}{{ . | urlize | lower }}/">
-                        {{ . }}
+                        {{ . | lower }}
                       </a>
                     </li>
                   {{ end }}
