--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -8,12 +8,12 @@
           <div class="content mb-10">
             {{ .Content | markdownify }}
           </div>
-          <div class="row items-start justify-between">
+          <div class="flex md:flex-row flex-col md:items-start md:justify-between justify-center">
             {{ $tags:= .Params.tags }}
             {{ if $tags }}
-              <div class="lg:col-6 mb-10 flex items-center lg:mb-0 ">
+              <div class="md:col-6 mb-10 flex md:flex-row flex-col md:mb-0 md:items-start items-center gap-y-4 md:gap-y-0">
                 <h5 class="mr-3">{{ T "tags" }}&nbsp;:</h5>
-                <ul>
+                <ul class="flex flex-wrap justify-center md:justify-start">
                   {{ range $i,$p:= $tags }}
                     <li class="inline-block">
                       <a
@@ -26,8 +26,9 @@
                 </ul>
               </div>
             {{ end }}
-            <div class="lg:col-6 flex items-center">
-              {{ partial "social-share" (dict "Context" . "Class" "share-icons lg:ml-auto" "Title" (T "share") "Whatsapp" false "Telegram" false "Linkedin" false "Pinterest" false "Tumblr" false "Vk" false) }}
+            <div class="flex md:items-start items-center flex-col md:flex-row gap-y-4 md:gap-y-0">
+              {{ partial "social-share" (dict "Context" . "Class" "flex flex-row flex-wrap share-icons" "Title" (T "share") "Facebook" false "Twitter" false "Email" false "Reddit" false "Fediverse" false "Copy" false "Whatsapp" false "Telegram" false "Linkedin" false "Pinterest" false "Tumblr" false "Vk" false) }}
+              {{ partial "social-share" (dict "Context" . "Class" "flex flex-row flex-wrap share-icons" "Whatsapp" false "Telegram" false "Linkedin" false "Pinterest" false "Tumblr" false "Vk" false) }}
             </div>
           </div>
         </article>
