--- a/layouts/partials/testimonials-dark.html
+++ b/layouts/partials/testimonials-dark.html
@@ -1,13 +1,13 @@
 {{ with site.GetPage "sections/testimonials" }}
 {{ if .Params.enable }}
-<section class="pt-20 pb-10 section light-bg">
+<section class="pt-20 section dark-bg">
   <div class="container">
     <div class="row">
       <div class="mx-auto mb-12 text-center md:col-10 lg:col-8 xl:col-6 ">
-        <h2 class="mb-4 text-slate-900">
+        <h2 class="mb-4 text-slate-50">
           {{ .Title | markdownify }}
         </h2>
-        <p class="text-slate-900">
+        <p class="text-slate-50">
           {{ .Params.description | markdownify }}
         </p>
       </div>
@@ -27,11 +27,11 @@
                   <div class="text-dark dark:text-white max-w-28">
                     {{ partial "image" (dict "Src" .avatar "Size" "" "Class" "rounded rounded-full" "Alt" .name) }}
                   </div>
-                  <div class="">
+                  <div class="flex flex-col">
                     <h3 class="font-semibold h5 font-primary">
                       {{ .name }}
                     </h3>
-                    <p class="text-dark dark:text-white">
+                    <p class="text-dark dark:text-white m-0">
                       {{ .designation | markdownify }}
                     </p>
                     <p class="text-dark dark:text-white">
