reorganize te page

--- a/layouts/knitting-technical-editing/list.html
+++ b/layouts/knitting-technical-editing/list.html
@@ -18,27 +18,21 @@
 {{ partial "components/shape-divider-light.html" . }}
 <!-- /Shape divider -->
 
+<!-- TE testimonials -->
+{{ partial "testimonials-dark.html" . }}
+<!-- /TE testimonials -->
+
 <!-- TE services -->
 {{ partial "te-services.html" . }}
 <!-- /TE services -->
 
 <!-- Shape divider -->
-{{ partial "components/shape-divider-dark.html" . }}
+{{ partial "components/shape-divider-light.html" . }}
 <!-- /Shape divider -->
 
-<!-- TE process -->
-{{ partial "te-process.html" . }}
-<!-- /TE process -->
 
 <!-- FAQ -->
 {{ partial "te-faq.html" . }}
 <!-- /FAQ -->
 
-<!-- Shape divider -->
-{{ partial "components/shape-divider-dark.html" . }}
-<!-- /Shape divider -->
-
-<!-- TE testimonials -->
-{{ partial "testimonials.html" . }}
-<!-- /TE testimonials -->
 {{ end }}
