--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -14,7 +14,7 @@
 
 // Custom styles for links
 a, .dark-bg a {
-  @apply text-indigo-400 no-underline transition duration-300 ease-in-out font-bold;
+  @apply text-indigo-800 no-underline transition duration-300 ease-in-out font-bold;
 }
 
 a:hover, .dark-bg a:hover {
@@ -115,6 +115,14 @@ h6 {
 
 .narrow-content-box p {
   @apply m-0 mb-4 leading-relaxed;
+}
+
+.testimonial-box {
+  @apply rounded-lg xl:w-2/5 bg-white dark:bg-darkmode-theme-light md:p-10 px-4 py-8 text-center items-center md:text-start md:items-start border border-indigo-100;
+}
+
+.testimonial-box p {
+  @apply leading-relaxed;
 }
 
 .portfolio-box {
