--- a/layouts/partials/te-faq.html
+++ b/layouts/partials/te-faq.html
@@ -1,6 +1,6 @@
 {{ with site.GetPage "sections/te-faq" }}
 {{ if .Params.enable }}
-<section class="pt-20 pb-20 section dark-bg">
+<section class="pt-20 section dark-bg">
     <div class="container">
         <div class="row">
             <div class="mx-auto mb-12 text-center md:col-10 lg:col-8 xl:col-6 ">
