--- a/layouts/partials/testimonials.html
+++ b/layouts/partials/testimonials.html
@@ -27,7 +27,7 @@
                   <div class="text-dark dark:text-white max-w-28">
                     {{ partial "image" (dict "Src" .avatar "Size" "" "Class" "rounded rounded-full" "Alt" .name) }}
                   </div>
-                  <div class="">
+                  <div class="flex flex-col">
                     <h3 class="font-semibold h5 font-primary">
                       {{ .name }}
                     </h3>
