--- a/layouts/knitting-technical-editing/list.html
+++ b/layouts/knitting-technical-editing/list.html
@@ -23,7 +23,7 @@
 <!-- /TE testimonials -->
 
 <!-- TE services -->
-{{ partial "te-services.html" . }}
+{{ partial "te-prices.html" . }}
 <!-- /TE services -->
 
 <!-- Shape divider -->
