--- a/layouts/partials/te-prices.html
+++ b/layouts/partials/te-prices.html
@@ -1,4 +1,4 @@
-{{ with site.GetPage "sections/te-services" }}
+{{ with site.GetPage "sections/te-prices" }}
 {{ if .Params.enable }}
 <section class="pt-20 pb-20 section light-bg">
   <div class="container">
