--- a/layouts/partials/testimonials-dark.html
+++ b/layouts/partials/testimonials-dark.html
@@ -11,7 +11,7 @@
           {{ .Params.description | markdownify }}
         </p>
       </div>
-      <div class="container flex flex-row flex-wrap justify-center gap-x-8 gap-y-8">
+      <div class="container flex flex-row flex-wrap justify-center gap-x-8 gap-y-8 mixed-bg">
             {{ range .Params.testimonials }}
               <div class="flex flex-col testimonial-box items-left gap-x-4">
                 <div class="text-dark dark:text-white ">
